fix(basic-3.3): short titles

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .main-content img {
   width: 100%;
 }
-.main-content .main-info-button {
+.main-content .main-button {
   font-family: fantasy, cursive;
 }
 
