--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.main-content img {
+.main-img {
   width: 100%;
 }
-.main-content .main-button {
+.main-button {
   font-family: fantasy, cursive;
 }
 
@@ -34,17 +34,17 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.none-style {
   list-style:none;
 }
-input,button{
+.none-outline {
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +53,11 @@ button {
   font-family: lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.title-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +66,7 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.text-task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,21 +78,21 @@ input[type="text"] {
   font-family: lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.text-task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.new-task-position {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.new-task-width {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +101,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item > .list-checkbox {
   margin: 0 10px;
 }
-li > label {
+.list-item > .list-item-task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.list-item >    .text-task {
   width: 226px
 }
-button.delete img {
+.delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.label-decor {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.text-task {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-task {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-task-label {
   display:none;
 }
