--- a/style.css
+++ b/style.css
@@ -4,46 +4,59 @@ body {
   color: #333;
   font-family: lato, sans-serif;
 }
+
 .main-content {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .main-img {
   width: 100%;
 }
+
 .main-button {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-	.main-content { text-align: center;
+
+	.main-content { 
+		text-align: center;
 }
+
 }
+
 .task-wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .task-row-wrapper {
   display: flex;
 }
+
 .list {
   margin:0;
   padding: 0px;
 }
+
 .none-style {
   list-style:none;
 }
+
 .none-outline {
   outline:none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -53,9 +66,11 @@ body {
   font-family: lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .title-task {
   color: #333;
@@ -66,6 +81,7 @@ body {
   margin: 0;
   text-transform: uppercase;
 }
+
 .text-task {
   margin: 0;
   font-size: 18px;
@@ -78,6 +94,7 @@ body {
   font-family: lato, sans-serif;
   color: #888;
 }
+
 .text-task:focus {
   color: #333;
 }
@@ -87,6 +104,7 @@ body {
   display: block;
   margin: 0 0 20px;
 }
+
 .new-task-width {
   width: 318px;
 }
@@ -101,6 +119,7 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+
 .list-item > * {
   vertical-align: middle;
 }
@@ -108,20 +127,24 @@ body {
 .list-item > .list-checkbox {
   margin: 0 10px;
 }
+
 .list-item > .list-item-task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .list-item >    .text-task {
   width: 226px
 }
+
 .delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete-img:hover {
   transform: rotateZ(0);
 }
