--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -135,7 +135,7 @@ body {
 }
 
 .list-item >    .text-task {
-  width: 226px
+  width: 226px;
 }
 
 .delete-img {
@@ -150,18 +150,18 @@ body {
 
 /* Completed */
 .label-decor {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .text-task {
-  display: none
+  display: none;
 }
 
 .edit-task {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-task-label {
