--- a/style.css
+++ b/style.css
@@ -100,6 +100,17 @@ body {
 }
 
 /* New Task */
+
+.new-task {
+	color: #333;
+	font-weight: 700;
+	font-size: 15px;
+	border-bottom: 2px solid #333;
+	padding: 30px 0 10px;
+	margin: 0;
+	text-transform: uppercase;
+}
+
 .new-task-position {
   display: block;
   margin: 0 0 20px;
@@ -155,7 +166,7 @@ body {
 }
 
 /* Edit Task */
-.text-task {
+.list-text-task {
   display: none;
 }
 
