fix(extended-2.1): add BEM

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   text-align: right;
 }
 
-.main-img {
+.main-content__img {
   width: 100%;
 }
 
-.main-button {
+.main-content__button {
   font-family: fantasy, cursive;
 }
 
@@ -34,13 +34,14 @@ body {
   margin: 0 auto 0;
 }
 
+/*  */
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.task-item-wrapper {
   display: flex;
 }
 
@@ -53,6 +54,7 @@ body {
   list-style: none;
 }
 
+/*  */
 .none-outline {
   outline: none;
 }
@@ -69,6 +71,17 @@ body {
 
 .btn:hover {
   color: #3a3a3a;
+}
+
+.title {
+	color: #333;
+	font-weight: 700;
+	font-size: 15px;
+	border-bottom: 2px solid #333;
+	padding: 30px 0 10px;
+	margin: 0;
+	text-transform: uppercase;
+	list-style: none;
 }
 
 /* Heading */
@@ -101,6 +114,27 @@ body {
 
 /* New Task */
 
+.task-item__title {
+	color: #333;
+	font-weight: 700;
+	font-size: 15px;
+	border-bottom: 2px solid #333;
+	padding: 30px 0 10px;
+	margin: 0;
+	text-transform: uppercase;
+	display: block;
+  margin: 0 0 20px;
+}
+
+.task-item-wrapper__input {
+	outline: none;
+	width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+	outline: none;
+}
+
+/*  */
 .new-task {
 	color: #333;
 	font-weight: 700;
@@ -111,6 +145,7 @@ body {
 	text-transform: uppercase;
 }
 
+/*  */
 .new-task-position {
   display: block;
   margin: 0 0 20px;
@@ -128,21 +163,65 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+	list-style: none;
+}
+
+.list-item__input {
+	width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+	display: none;
+}
+
+.list-item__input {
+	width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+	display: none;
+}
+
+.list-item__input--edit {
+	margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: lato, sans-serif;
+  color: #888;
+	display: inline-block;
+	width: 224px;
 }
 
 .list-item > * {
   vertical-align: middle;
 }
 
-.list-item > .list-checkbox {
+.list-item > .list-item__checkbox {
   margin: 0 10px;
 }
 
-.list-item > .list-item-task {
+.list-item__task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+	width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+
+.list-item__task--edit {
+  /* padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
+	width: 56%; */
+  display: none;
+  /* flex-grow: 1; */
+	outline-style: none;
 }
 
 .list-item > .text-task {
@@ -160,7 +239,7 @@ body {
 }
 
 /* Completed */
-.label-decor {
+.list-item__task--decor {
   text-decoration: line-through;
   color: #888;
 }
