--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/* Basic Style */
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: lato, sans-serif;
+  font-family: Lato, sans-serif;
 }
 
 .main-content {
@@ -34,13 +33,6 @@ body {
   margin: 0 auto 0;
 }
 
-/*  */
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
 .task-item-wrapper {
   display: flex;
 }
@@ -54,7 +46,6 @@ body {
   list-style: none;
 }
 
-/*  */
 .none-outline {
   outline: none;
 }
@@ -65,7 +56,7 @@ body {
   color: #888;
   font-size: 15px;
   width: 60px;
-  font-family: lato, sans-serif;
+  font-family: Lato, sans-serif;
   cursor: pointer;
 }
 
@@ -84,17 +75,6 @@ body {
 	list-style: none;
 }
 
-/* Heading */
-.title-task {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
-}
-
 .text-task {
   margin: 0;
   font-size: 18px;
@@ -104,15 +84,13 @@ body {
   border: 1px solid #ddd;
   background: #fff;
   border-radius: 6px;
-  font-family: lato, sans-serif;
+  font-family: Lato, sans-serif;
   color: #888;
 }
 
 .text-task:focus {
   color: #333;
 }
-
-/* New Task */
 
 .task-item__title {
 	color: #333;
@@ -134,28 +112,6 @@ body {
 	outline: none;
 }
 
-/*  */
-.new-task {
-	color: #333;
-	font-weight: 700;
-	font-size: 15px;
-	border-bottom: 2px solid #333;
-	padding: 30px 0 10px;
-	margin: 0;
-	text-transform: uppercase;
-}
-
-/*  */
-.new-task-position {
-  display: block;
-  margin: 0 0 20px;
-}
-
-.new-task-width {
-  width: 318px;
-}
-
-/* Task list */
 .list-item {
   overflow: hidden;
   padding: 20px 0;
@@ -164,13 +120,6 @@ body {
   justify-content: space-between;
   align-items: center;
 	list-style: none;
-}
-
-.list-item__input {
-	width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-	display: none;
 }
 
 .list-item__input {
@@ -191,7 +140,6 @@ body {
 }
 
 .list-item__input--edit {
-	
 	display: inline-block;
 	width: 224px;
 }
@@ -215,13 +163,7 @@ body {
 }
 
 .list-item__task--edit {
-  /* padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 226px;
-	width: 56%; */
   display: none;
-  /* flex-grow: 1; */
 	outline-style: none;
 }
 
@@ -239,13 +181,11 @@ body {
   transform: rotateZ(0);
 }
 
-/* Completed */
 .list-item__task--decor {
   text-decoration: line-through;
   color: #888;
 }
 
-/* Edit Task */
 .list-text-task {
   display: none;
 }
